[package]
name = "as3_compiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lalrpop-util = { version = "0.20.0", features = ["lexer", "unicode"] }
logos = "0.13.0"
thiserror = "1.0.48"
swf = { git = "https://github.com/sleepycatcoding/ruffle", branch = "make_write_op_pub" }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
clap = { version = "4.4.6", features = ["derive"] }

[build-dependencies]
lalrpop = { version = "0.20.0" }
